--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,16 @@
 {
+  "extends": "standard",
   "env": {
-    "es6": true,
-    "node": true
+    "node": true,
+    "es2020": true
   },
-  "extends": [
-    "standard"
-  ],
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 6
+    "sourceType": "module"
   },
-  "parser": "babel-eslint"
+  "settings": {
+    "import/resolver": {
+      "babel-module": {}
+    }
+  }
 }
