--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "@sequencemedia/itunes-library-transformer",
   "version": "0.0.10",
+  "main": "./app.js",
+  "engines": {
+    "node": ">=12.18.1"
+  },
   "scripts": {
     "babel": "babel src -d lib",
-    "lint": "eslint *.js src",
+    "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix"
+  },
+  "dependencies": {
+    "@sequencemedia/itunes-library-stream": "0.0.14",
+    "fs-extra": "^9.0.1",
+    "userhome": "^1.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.3",
@@ -20,10 +29,5 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
-  },
-  "dependencies": {
-    "@sequencemedia/itunes-library-stream": "0.0.14",
-    "fs-extra": "^9.0.1",
-    "userhome": "^1.0.0"
   }
 }
