--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@sequencemedia/itunes-library-stream": "0.0.16",
+    "@sequencemedia/itunes-library-stream": "^0.0.17",
     "fs-extra": "^9.1.0",
     "userhome": "^1.0.0"
   },
