--- a/package.json
+++ b/package.json
@@ -11,22 +11,19 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
-    "@sequencemedia/itunes-library-stream": "^0.0.17",
+    "@sequencemedia/itunes-library-stream": "^0.0.18",
     "fs-extra": "^9.1.0",
     "userhome": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
-    "@babel/register": "^7.13.14",
-    "eslint": "^7.23.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1"
+    "@babel/register": "^7.13.16",
+    "eslint": "^7.25.0",
+    "standard": "^16.0.3"
   }
 }
