--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@babel/runtime": "^7.15.4",
     "@sequencemedia/itunes-library-stream": "0.0.18",
     "fs-extra": "^10.0.0",
     "userhome": "^1.0.0"
@@ -20,7 +21,7 @@
     "@babel/core": "^7.15.5",
     "@babel/eslint-parser": "^7.15.7",
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
-    "@babel/polyfill": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
     "eslint": "^7.32.0",
