--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
-    "@sequencemedia/itunes-library-stream": "0.0.18",
+    "@sequencemedia/itunes-library-stream": "0.0.20",
     "fs-extra": "^10.0.0",
     "userhome": "^1.0.0"
   },
@@ -25,6 +25,9 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/register": "^7.15.3",
     "eslint": "^7.32.0",
-    "standard": "^16.0.3"
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0"
   }
 }
