--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/register": "^7.16.0",
-    "eslint": "^8.2.0",
+    "eslint": "7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
