--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/register": "^7.17.7",
-    "eslint": "7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.11.0",
+    "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "5.2.0"
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
